# lpp

./: .gitignore  CMakeLists.txt  FUNDING.yml  INSTALL.md  README.md  TODO.txt  mk
cmake/: FindGetVersion.cmake
debian/: README.Debian  README.source  changelog  control  copyright  docs  lpp-doc.install
debian/source/: options
doc/: CMakeLists.txt  footer.html  lpp-doc.doxy.in
rt/: CMakeLists.txt  README.md  context.cpp  error.cpp  file.cpp  lpp.cpp  lpp.hpp  main.cpp  minus.cpp  number.cpp  primitive_allopen.cpp  primitive_and.cpp  primitive_arccos.cpp  primitive_arcsin.cpp  primitive_arctan.cpp  primitive_arity.cpp  primitive_ascii.cpp  primitive_ashift.cpp  primitive_backslashedp.cpp  primitive_beforep.cpp  primitive_bitand.cpp  primitive_bitnot.cpp  primitive_bitor.cpp  primitive_bitxor.cpp  primitive_butfirst.cpp  primitive_butlast.cpp  primitive_bye.cpp  primitive_byte.cpp  primitive_char.cpp  primitive_cleartext.cpp  primitive_close.cpp  primitive_closeall.cpp  primitive_combine.cpp  primitive_comparablep.cpp  primitive_cos.cpp  primitive_count.cpp  primitive_cursor.cpp  primitive_definedp.cpp  primitive_dequeue.cpp  primitive_difference.cpp  (+143 more)
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  control_primitives.cpp  error.cpp  error.hpp  exception.cpp  exception.hpp  inline_primitives.cpp  lexer.cpp  lexer.hpp  license.cpp  lpp.cpp  parser.cpp  parser.hpp  primitives.cpp  token.cpp  token.hpp  version.hpp.in
tests/: CMakeLists.txt
tests/suite/: syntax-print.logo
